--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  with-input:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest, macos-12]
@@ -31,3 +31,11 @@ jobs:
         with:
           whiskers-version: ${{ matrix.version }}
       - run: whiskers --version
+
+  without-input:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup catppuccin/whiskers
+        uses: ./
+      - run: whiskers --version # should be 2.1.0
