--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,19 +8,17 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  with-input:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest, macos-12]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
             version: "2.5.0" # should be 2.5.0
-          - os: macos-latest
-            version: "2.1" # should be 2.1.1
           - os: windows-latest
             version: "2" # should be 2.5.0
-          - os: macos-12
-            version: "1.x" # should be 1.1.4
+          - os: macos-latest
+            version: "2.1" # should be 2.1.1
             
 
     runs-on: ${{ matrix.os }}
@@ -31,3 +29,11 @@ jobs:
         with:
           whiskers-version: ${{ matrix.version }}
       - run: whiskers --version
+
+  without-input:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup catppuccin/whiskers
+        uses: ./
+      - run: whiskers --version # should be latest 2.x
