--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,7 @@ runs:
 
     - name: Download sgoudham/what-version
       if: ${{ !inputs.whiskers-version }}
-      uses: sgoudham/setup-crate@feat/support-unzipped-binaries-diverged
+      uses: sgoudham/setup-crate@fix/ripgrep
       with:
         repo: sgoudham/what-version@0.1.0
         github-token: ${{ inputs.github-token }}
@@ -69,7 +69,7 @@ runs:
       run: what-version ${{ toJson(steps.ripgrep.outputs.VERSION_REQUIREMENTS) }} ${{ toJson(steps.ghapi.outputs.WHISKERS_VERSIONS) }}
 
     - name: Download catppuccin/whiskers
-      uses: sgoudham/setup-crate@feat/support-unzipped-binaries-diverged
+      uses: sgoudham/setup-crate@fix/ripgrep
       with:
         repo: catppuccin/whiskers@${{ inputs.whiskers-version || steps.what_version.outputs.WHAT_VERSION }}
         github-token: ${{ inputs.github-token }}
