--- a/action.yml
+++ b/action.yml
@@ -18,13 +18,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: cargo-bins/cargo-binstall@main
-      if: ${{ !inputs.whiskers-version }}
-
-    - run: cargo-binstall ripgrep
-      if: ${{ !inputs.whiskers-version }}
-      shell: bash
-
     # https://github.com/cli/cli/blob/trunk/docs/install_linux.md
     - name: Install GitHub CLI
       shell: bash
@@ -41,10 +34,14 @@ runs:
 
     - name: Extract versions from `*.tera` files
       if: ${{ !inputs.whiskers-version }}
-      id: ripgrep
+      id: find
       shell: bash
       run: |
-        echo "VERSION_REQUIREMENTS=$(rg --glob "*.tera" --no-filename --hidden --no-line-number -e 'version: "?(?:[^"\n]*)"?' "${{ inputs.files }}" --json | jq 'select(.type == "match") | .data | .path.text as $path | .submatches[] | {path: $path, version_req: .match.text | split(" ")[1]}' | jq -sc)" >> "$GITHUB_OUTPUT"
+        echo "VERSION_REQUIREMENTS=$(find . -name "*.tera" -exec sh -c '
+          FILE={}
+          VERSION=$(sed -n "/^---$/,/^---$/p" "$FILE" | yq eval ".whiskers.version" - | head -n 1)
+          echo "{\"path\":\"$FILE\",\"version_req\":\"$VERSION\"}"
+        ' \; | jq -sc)" >> "$GITHUB_OUTPUT"
 
     - name: Retrieve versions of catppuccin/whiskers
       if: ${{ !inputs.whiskers-version }}
@@ -66,7 +63,7 @@ runs:
       if: ${{ !inputs.whiskers-version }}
       shell: bash
       id: what_version
-      run: what-version ${{ toJson(steps.ripgrep.outputs.VERSION_REQUIREMENTS) }} ${{ toJson(steps.ghapi.outputs.WHISKERS_VERSIONS) }}
+      run: what-version ${{ toJson(steps.find.outputs.VERSION_REQUIREMENTS) }} ${{ toJson(steps.ghapi.outputs.WHISKERS_VERSIONS) }}
 
     - name: Download catppuccin/whiskers
       uses: sgoudham/setup-crate@fix/ripgrep
