--- a/action.yml
+++ b/action.yml
@@ -52,12 +52,13 @@ runs:
       env:
         GH_TOKEN: ${{ github.token }}
 
+    - name: Download cargo-binstall
+      uses: cargo-bins/cargo-binstall@main
+
     - name: Download sgoudham/what-version
       if: ${{ !inputs.whiskers-version }}
-      uses: sgoudham/setup-crate@fix/ripgrep
-      with:
-        repo: sgoudham/what-version@0.1.0
-        github-token: ${{ inputs.github-token }}
+      shell: bash
+      run: cargo-binstall what-version --version 0.2.0 --no-confirm
 
     - name: Get Chosen Version
       if: ${{ !inputs.whiskers-version }}
@@ -66,10 +67,8 @@ runs:
       run: what-version ${{ toJson(steps.find.outputs.VERSION_REQUIREMENTS) }} ${{ toJson(steps.ghapi.outputs.WHISKERS_VERSIONS) }}
 
     - name: Download catppuccin/whiskers
-      uses: sgoudham/setup-crate@fix/ripgrep
-      with:
-        repo: catppuccin/whiskers@${{ inputs.whiskers-version || steps.what_version.outputs.WHAT_VERSION }}
-        github-token: ${{ inputs.github-token }}
+      shell: bash
+      run: cargo-binstall catppuccin-whiskers --version ${{ inputs.whiskers-version || steps.what_version.outputs.WHAT_VERSION }}  --no-confirm
 
 branding:
   icon: "dollar-sign"
