--- a/action.yml
+++ b/action.yml
@@ -6,8 +6,8 @@ inputs:
   whiskers-version:
     description: "Semver compatible version of catppuccin/whiskers to install"
     required: false
-  files:
-    description: The directory to scan for Tera files
+  dirs:
+    description: "Space-separated list of directories to scan for *.tera files"
     required: false
     default: "."
   github-token:
@@ -37,10 +37,10 @@ runs:
       id: find
       shell: bash
       run: |
-        echo "VERSION_REQUIREMENTS=$(find . -name "*.tera" -exec sh -c '
+        echo "VERSION_REQUIREMENTS=$(find ${{ inputs.dirs }} -name "*.tera" -exec sh -c '
           FILE={}
           VERSION=$(sed -n "/^---$/,/^---$/p" "$FILE" | yq eval ".whiskers.version" - | head -n 1)
-          echo "{\"path\":\"$FILE\",\"version_req\":\"$VERSION\"}"
+          echo \"$VERSION\"
         ' \; | jq -sc)" >> "$GITHUB_OUTPUT"
 
     - name: Retrieve versions of catppuccin/whiskers
@@ -58,7 +58,7 @@ runs:
     - name: Download sgoudham/what-version
       if: ${{ !inputs.whiskers-version }}
       shell: bash
-      run: cargo-binstall what-version --version 0.2.0 --no-confirm
+      run: cargo-binstall what-version --version 0.3.0 --no-confirm
 
     - name: Get Chosen Version
       if: ${{ !inputs.whiskers-version }}
