--- a/action.yml
+++ b/action.yml
@@ -56,9 +56,21 @@ runs:
       uses: cargo-bins/cargo-binstall@main
 
     - name: Download sgoudham/what-version
-      if: ${{ !inputs.whiskers-version }}
       shell: bash
-      run: cargo-binstall what-version --version 0.3.0 --no-confirm --git https://github.com/sgoudham/what-version.git
+      run: |
+        mkdir ${{ env.TARGET }}
+        curl -sSLo ${{ env.TARGET }}/${{ env.BINARY }} https://github.com/sgoudham/what-version/releases/download/${{ env.VERSION }}/${{ env.TARGET }}
+        chmod +x ${{ env.TARGET }}/${{ env.BINARY }}
+        echo `pwd`/${{ env.TARGET }} >> $GITHUB_PATH
+      env:
+        VERSION: "v0.3.0"
+        BINARY: "what-version"
+        TARGET: "what-version-x86_64-unknown-linux-gnu"
+
+    # - name: Download sgoudham/what-version
+    #   if: ${{ !inputs.whiskers-version }}
+    #   shell: bash
+    #   run: cargo-binstall what-version --version 0.3.0 --no-confirm --git https://github.com/sgoudham/what-version.git
 
     - name: Get Chosen Version
       if: ${{ !inputs.whiskers-version }}
@@ -68,7 +80,7 @@ runs:
 
     - name: Download catppuccin/whiskers
       shell: bash
-      run: cargo-binstall catppuccin-whiskers --version ${{ inputs.whiskers-version || steps.what_version.outputs.WHAT_VERSION }}  --no-confirm --git https://github.com/catppuccin/whiskers.git
+      run: cargo-binstall catppuccin-whiskers --version ${{ inputs.whiskers-version || steps.what_version.outputs.WHAT_VERSION }}  --no-confirm
 
 branding:
   icon: "dollar-sign"
