--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
   with-input:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest, macos-13]
+        os: [ubuntu-latest, macos-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
             version: "2.5.0" # should be 2.5.0
@@ -19,7 +19,7 @@ jobs:
             version: "2.1" # should be 2.1.1
           - os: windows-latest
             version: "2" # should be 2.5.0
-          - os: macos-13
+          - os: macos-latest
             version: "1.x" # should be 1.1.4
             
 
@@ -38,4 +38,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup catppuccin/whiskers
         uses: ./
-      - run: whiskers --version # should be 2.1.0
+      - run: whiskers --version # should be latest 2.x
